# fpsgame

./: .gitmodules  CMakeLists.txt  box.c  box.h  breaktables.h  button.c  button.h  ddsloader.c  ddsloader.h  default.nix  entity.c  entity.h  font.c  font.h  gameState.c  gameState.h  gen-unicode-tables.lua  glUtil.c  glUtil.h  image.c  image.h  label.c  label.h  linebreak.c  linebreak.h  main.c  model.c  model.h  ninePatch.c  ninePatch.h  pngloader.c  pngloader.h  renderer.c  renderer.h  spriteBatch.c  spriteBatch.h  state.c  state.h  unicodeTables.h  widget.c  (+1 more)
assets/: pyramid.mtl  skybox.dds
cmake/Modules/: FindHarfBuzz.cmake
src/: spriteBatch.c  spriteBatch.h
